Fixed SVY-9776 : Imported components do not appear under NG-Components node
A slash was missing from the URL which made Windows eclipse not match
resources.